--- a/blazorDemo/Pages/Index.razor
+++ b/blazorDemo/Pages/Index.razor
@@ -3,5 +3,8 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+@*embedding component into this page, no import required!*@
+<Counter />
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
