--- a/blazorDemo/Pages/Index.razor
+++ b/blazorDemo/Pages/Index.razor
@@ -1,8 +1,13 @@
 ﻿@page "/"
+@using blazorDemo.components
 
 <h1>Hello, world!</h1>
-
+@*this does require an import, should be able to use it imports somehow or above*@
+<MyFirstComponent/>
 Welcome to your new app.
+
+
+
 @*embedding component into this page, no import required!*@
 <Counter />
 
