wrote second component that takes in parameter from parent

--- a/blazorDemo/Pages/Index.razor
+++ b/blazorDemo/Pages/Index.razor
@@ -2,11 +2,9 @@
 @using blazorDemo.components
 
 <h1>Hello, world!</h1>
-@*this does require an import, should be able to use it imports somehow or above*@
-<MyFirstComponent/>
+@*this does require an import, listed in shared imports*@
+@*<MyFirstComponent/>*@
 Welcome to your new app.
-
-
 
 @*embedding component into this page, no import required!*@
 <Counter />
