--- a/blazorDemo/Pages/Counter.razor
+++ b/blazorDemo/Pages/Counter.razor
@@ -7,7 +7,8 @@
 
 @*it is possible to insert programmable content by escaping with with the @ symbol.
     In this case we are displaying the value of the counter private member.*@
-<p>The counter value is @counter</p>
+<p>Current Count: @currentCount</p>
+<MySecondComponent CurrentCounterValue=@currentCount />
 <button class="btn btn-primary" @onclick=IncrementCounter>Increment counter</button>
 
 
@@ -16,10 +17,10 @@
 @code {
 
 
-    private int counter = 42;
+    private int currentCount = 42;
 
     private void IncrementCounter()
     {
-        counter++;
+        currentCount++;
     }
 }
