--- a/blazorDemo/components/MyFirstComponent.razor
+++ b/blazorDemo/components/MyFirstComponent.razor
@@ -5,16 +5,15 @@
 <div>
     CurrentCounterValue in MyFirstComponent is @CurrentCounterValue
 </div>
-<button class="btn btn-primary" @onclick=IncrementCounter>Increment counter</button>
-
-
-
+<button @onclick=@UpdateCurrentCounterValue>Update</button>
 @code {
-    private int CurrentCounterValue = 42;
-
-    private void IncrementCounter()
+    [Parameter]
+    public int CurrentCounterValue { get; set; }
+    [Parameter]
+    public EventCallback<int> CurrentCounterValueChanged { get; set; }
+    async Task UpdateCurrentCounterValue()
     {
         CurrentCounterValue++;
+        await CurrentCounterValueChanged.InvokeAsync(CurrentCounterValue);
     }
-
 }
