--- a/blazorDemo/Shared/NavMenu.razor
+++ b/blazorDemo/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="admin/users">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Admin Users
+            <NavLink class="nav-link" href="Tasks">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Tasks
             </NavLink>
         </li>
     </ul>
